--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
     "autoload": {
         "psr-4": {
-            "Lib\\": "Lib/"
+            "Lib\\": "Lib/",
+            "App\\": "App/"
         }
     },
     "require": {
         "nesbot/carbon": "^2.46",
-        "league/plates": "^3.4"
+        "league/plates": "^3.4",
+        "altorouter/altorouter": "^2.0",
+        "vlucas/phpdotenv": "^5.3"
     }
 }
